Fix projects short description alignment in admin

--- a/src/sass/components/_context-menu.scss
+++ b/src/sass/components/_context-menu.scss
@@ -11,6 +11,10 @@
       background-color: variables.$brand-primary !important; // stylelint-disable-line declaration-no-important
       color: variables.$brand-text !important; // stylelint-disable-line declaration-no-important
     }
+
+    > td.short_description > div.wiki {
+      color: variables.$brand-text;
+    }
   }
 
   #context-menu {
